--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>CI/CD Jenkins</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Simple Website</title>
 </head>
+
 <body>
-    <h1>¡Deploy exitoso con Jenkins, Docker y Kubernetes!</h1>
-    <p>Práctica de CI/CD funcionando correctamente.</p>
+    <header>
+        <h1>Hello Guest</h1>
+        <p>You are viewing a test NGINX Docker image container.</p>
+    </header>
+    <main>
+        <!-- Add your content here -->
+    </main>
+    <footer>
+        <!-- Add your footer content here -->
+    </footer>
 </body>
-</html>
